--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
-   CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 SET(CMAKE_CXX_STANDARD 11)
 
 ADD_SUBDIRECTORY(googletest)
 
 ADD_EXECUTABLE(test
-    test.cpp
+    src/rectangle.cpp
+    tests/test.cpp
 )
 
 TARGET_LINK_LIBRARIES(test gtest)
