--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main, zwang465/ci_setup ]
+    branches: [ main, zwang465/ci_setup, wang465/passing_tests, gchiu006/failing_tests]
   pull_request:
     branches: [ main ]
 
